# ibxpy-ai

./: .gitignore  .gitmodules  CLAUDE.md  IBAPI_INSTALLATION.md  README.md  install_ibapi.sh  pyproject.toml
.claude/agents/: python-phase-tester-implementation.md  python-phase-tester.md
.claude/commands/: git-push-rec.md  hello-bash.md  hello-nu.md  hello.md
.claude/slash_commands/: git-push-rec.sh
backend/: README.md  __init__.py  main.py  pytest.ini  requirements.txt  run_tests.sh
backend/api/: __init__.py  health.py  market_data.py  monitoring.py  orders.py  state.py  trading.py  websocket.py
backend/core/: __init__.py  config.py  dependencies.py  error_handler.py  exceptions.py
backend/services/: __init__.py  connection_recovery.py  market_data_processor.py  order_manager.py  state_manager.py  trading_engine.py  tws_service.py  websocket_service.py
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_error_handler.py  test_performance.py  test_services.py  test_websocket.py
context/: CLAUDE.md  ibapi-config.md  requirements.md  tasks.md
docs/: agents_recommendation.md
frontend/: package-lock.json  package.json
ibxpy_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: install_ibgateway.sh
src/: bar_data.py  connection.py  five_second_bars.py  main.py  order_placement.py  stock_quote.py
tests/: test_connection.py  test_phase12_bar_data_integration.py  test_phase12_bar_data_unit.py  test_phase6_integration.py  test_phase6_stock_quote.py  test_phase7_10_complete.py  test_phase7_prompt.py  test_phase9.py
(+53 files in other folders)
