[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibxpy-ai"
version = "0.1.0"
description = "AI-powered Interactive Brokers trading system"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Phage Ky", email = "kyp0717@gmail.com"}
]
dependencies = [
    # Note: IB Python API package must be installed manually
    # Download from Interactive Brokers and install via:
    # pip install /path/to/TWS_API/source/pythonclient
    "websockets>=11.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=23.0",
    "colorama>=0.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "aiofiles>=23.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "ipython>=8.0",
]

[tool.setuptools]
py-modules = ["src"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
